1.4.7:
-----

- Moved manticore to a dedicated docker image

  When using piler in docker, be sure to update /etc/piler/piler.conf, and set

  sphxhost=manticore

  Also fix /etc/piler/config-site.php:

  $config['SPHINX_HOSTNAME'] = 'manticore:9306';
  $config['SPHINX_HOSTNAME_READONLY'] = 'manticore:9307'

- Display svg images in preview pane (#97)



1.4.6:
-----

- Updated the GUI to use latest bootstrap (5.3.3) and jquery (3.7.1)

- Write audit records to manticore

  Note that it requires real-time (rt) index. When using plain index,
  then no audit record is written

- Added support for path prefix, ie. when the archive can be accessed
  at https://example.com/archive/ (instead of using a dedicated hostname,
  eg. https://archive.example.com).

  To do that:
    * fix the PATH_PREFIX and SITE_URL in config-site.php, eg.
      $config['PATH_PREFIX'] = '/archive/';
      $config['SITE_URL'] = 'https://' . $config[SITE_NAME_CONST] . '/archive/';

    * fix the base_url in assets/js/piler.js, eg.
      base_url: location.origin + '/archive/',

    * fix <sysconfdir>/piler/piler-nginx.conf (eg. /etc/piler/piler-nginx.conf)
      ** fix the location, eg.

         location /archive {
            alias /var/piler/www;
            index  index.php index.html;
            try_files $uri $uri/ /index.php;

            ....
         }

      ** fix the rewrite rules, eg.

      rewrite /search.php /index.php?route=search/search&type=simple;

      becomes

      rewrite /archive/search.php /archive/index.php?route=search/search&type=simple;

- import.sh and accounting are enabled in piler's crontab by default

- Created a tool to mass download emails from Microsoft365 (formerly office365)
  You may find it in the contrib/o365 dir

- Obsoleted ENABLE_ON_THE_FLY_VERIFICATION variable
  The GUI behaves like if ENABLE_ON_THE_FLY_VERIFICATION=0


1.4.5:
------

- Introduced 2 new variables in /etc/piler/piler.conf affecting piler-smtp

  ; max message size in bytes