@@ -27,15 +27,11 @@ AC_SUBST(MAKE)
 AC_SUBST(sql_includes)
 AC_SUBST(sql_libs)
 AC_SUBST(sql_obj)
-AC_SUBST(libclamav_extra_libs)
 AC_SUBST(id_bin)
 AC_SUBST(iv)
 
-have_libclamav="no"
 have_libtool="no"
-have_clamd="no"
 
-have_antivirus="no"
 have_mysql="no"
 have_psql="no"
 have_tre="no"
@@ -99,17 +95,6 @@ dnl
 
 AC_ARG_ENABLE(compat-layout,
           [  --enable-compat-layout  support for older storage layout (default: no)], have_compat_storage_layout=$enableval, have_compat_storage_layout="no")
-
-
-dnl clamd
-
-
-AC_ARG_ENABLE(clamd,
-	[  --enable-clamd          build clamd antivirus support], want_clamd=$enableval, want_clamd="no")
-   if test "$want_clamd" = "yes"; then
-      have_clamd="yes"
-      have_antivirus="yes"
-   fi
 
 
 AC_ARG_ENABLE(memcached,
@@ -326,13 +311,6 @@ if test "$os" = "SunOS"; then
    if test -x /usr/xpg4/bin/id; then id_bin="/usr/xpg4/bin/id"; fi
 fi
 
-dnl whether we have antivirus support
-
-if test "$have_clamd" = "yes" ; then
-   defs="$defs -DHAVE_ANTIVIRUS"
-   objs="$objs avir.o"
-fi
-
 echo; echo
 
 echo "run as user: $RUNNING_USER"
@@ -374,12 +352,6 @@ fi
 
 
 echo
-
-if test "$have_clamd" = "yes"; then
-   echo "clamd support: yes"
-   objs="$objs clamd.o"
-   defs="$defs -DHAVE_CLAMD"
-fi
 
 if test "$want_memcached" = "yes"; then
    echo "memcached support: yes"
